frontend is ready

--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -1,2 +1,22 @@
 <!DOCTYPE html>
-Hello. This Works. Keep Going
+
+<div id="result">
+    <h3 class="result"> Balance : XXX </h3>
+    <h3 class="result"> Debt : XXX </h3>
+    <h3 class="result"> Total : XXX </h3>
+</div>
+
+<table>
+  <tr>
+    <th>Date</th>
+    <th>Title</th>
+    <th>Amount</th>
+  </tr>
+    <tr>
+    <td>2016-09-22</td>
+    <td>Ham Burger</td>
+    <td>150</td>
+    <td> <a style="font-size:15px" class = 'btn btn-sm btn-warning'> Edit </a> </td>
+    <td> <a style="font-size:15px" class = 'btn btn-sm btn-danger'> Delete </a>
+  </tr>
+</table>
