--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>Finance Tracking by Ishaan</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+<%= render 'shared/nav' %>
 
-<%= yield %>
+<div id="container">
+ <%= yield %>
+</div>
+
+<%= render 'shared/footer' %>
 
 </body>
 </html>
