--- a/app/assets/stylesheets/finances.scss
+++ b/app/assets/stylesheets/finances.scss
@@ -1,3 +1,78 @@
-// Place all the styles related to the finances controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+    padding:0;
+    margin:0;
+    font-family:helvetica;
+}
+
+#navbar{
+    width:100%;
+    height:50px;
+    background-color:black;
+}
+
+a{
+    text-decoration:none;
+    color:#c8c8c8;
+    padding:5px 20px;
+    cursor:pointer;
+}
+
+a:hover{
+    text-decoration:none;
+    color:white;
+}
+
+.brand_name{
+    font-size:25px;
+    line-height:45px;
+}
+
+.nav_link{
+    font-size:20px;
+    float:right;
+    line-height:40px;
+}
+
+#container{
+    min-height:800px;
+    width:80%;
+    margin:0px auto;
+}
+
+#result{
+    margin-top:50px;
+}
+
+h3.result{
+    font-size:30px;
+}
+
+table{
+    margin-top:30px;
+    width:100%;
+    border-top:1px solid #e3e3e3;
+}
+
+th{
+    min-width:200px;
+    font-size:15px;
+    padding:10px 10px;
+}
+
+td{
+    padding:10px; 
+    border-top:1px solid #e3e3e3;
+}
+
+#footer{
+    width:100%;
+    background-color:black;
+    padding:30px;
+    margin-top:30px;
+}
+
+p.footer{
+    color:#c8c8c8;
+    font-size:15px;
+    text-align:center;
+}
