--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
 <div id="navbar">
     <a class="brand_name"> Simple Accounting </a>
-    <a class="nav_link"> + New Record </a>
+    <%= link_to '+ New Record', new_finance_path, class:'nav_link' %>
 </div>
