--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+    
 <%= render 'shared/nav' %>
+
+<%= render 'shared/flash' %>
 
 <div id="container">
  <%= yield %>
