--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
 <div id="navbar">
-    <a class="brand_name"> Simple Accounting </a>
+    <%= link_to 'Simple Accounting', root_path, class:'brand_name' %>
     <%= link_to '+ New Record', new_finance_path, class:'nav_link' %>
 </div>
