--- a/app/views/finances/edit.html.erb
+++ b/app/views/finances/edit.html.erb
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 
+<h2> Edit Your Record </h2>
+<div id="form">
 <%= simple_form_for @records, method: :patch do |f| %>
   <%= f.input :title %>
   <%= f.input :amount %>
   <%= f.input :created_at, :label => "Date" %>
   <%= f.submit 'Submit' %>
 <% end %>
+</div>
